month dividers / colors

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="header">
     <div class="header_title">
       <h1>Wild Anarchy Timeline</h1>
+      <input class="search_box" type="text" placeholder="Search The Timeline (not working yet)">
     </div>
   </div>
 
@@ -22,7 +23,7 @@
         </div> 
     </div>
 
-    <div class="footer">
+    <div class="footer" id="bottom">
       <div class="footer_info">
         <span>Wild Anarchy Timeline | By: cqb13</span>
       </div>
