--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link href="css/sideBar.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,500" rel="stylesheet">
   </head>
-  <div class="header" id="top">
+  <div class="topBar">
     <span id="openSide" style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776; Nav Bar</span>
+  </div>
+  <div class="header" id="top">
     <div class="headerTitle">
       <h1>Wild Anarchy Timeline</h1>
     </div>
