--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="css/mobile.css" rel="stylesheet">
     <link href="css/sideBar.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,500" rel="stylesheet">
-    <script type="text/javascript" defer src="js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" defer src="js/general.js"></script>
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/general.js"></script>
   </head>
   <div class="topBar">
     <span id="openSide" style="font-size:25px;cursor:pointer" onclick="openNav()">&#9776; Nav Bar</span>
