--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       onclick="openNav()"
       >&#9776; Nav Bar</span
     >
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
   </div>
   <div class="header" id="top">
     <div class="headerTitle">
